# examples

./: .gitignore  README.md  pyproject.toml
bash_and_git/: checkout_and_run.sh  fudge_launch.py  hello_world.py  pyproject.toml
git/: fudge_launch.py  hello_git.py  launch.py  pyproject.toml
hello_world/: fudge_launch.py  pyproject.toml
jupyter_notebook/: launch_notebook.py  pyproject.toml
zip_local_dir/: fudge_launch.py  hello_zip.py  pyproject.toml
zipped/: entrypoint.sh  hello_zip.py  launch.py  pyproject.toml
