[tool.poetry]
name = "clusterfudge-examples"
version = "0.1.0"
description = ""
authors = ["George Thomas <george@clusterfudge.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
clusterfudge = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
