[tool.poetry]
name = "zip_local_dir"
version = "0.1.0"
description = ""
authors = ["George Thomas <george@clusterfudge.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
clusterfudge = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
